# cpp-ref

./: .clang-format  .clang-tidy  .gitmodules  CMakeLists.txt  Dockerfile  README.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: cmake.yml
cmake/: clang_format.cmake  cppref_test.cmake
doc/: CMakeLists.txt  Doxygen
example/: CMakeLists.txt  fileaccess.cpp  json_ex.cpp  logging.cpp
src/util/: CMakeLists.txt
src/util/state/: StateMachine.hpp
src/util/state/test/: CMakeLists.txt  TestStateMachine.cpp
